# myNapari

./: .gitignore  README.md  cool_tools_install_script.py  install.bat  installer_pixi.sh  launch_cool-tools_pixi.bat  launch_cool-tools_pixi.sh  pixi.toml  uninstall.bat
experimental/: readme.md
experimental/Split Spectrum/: compile_to_py.py  split_spectrum_form.py  split_spectrum_form.ui  split_spectrum_widget.py
experimental/batch-processing/: pytorch_unp_batch_processing.py
experimental/batch-tools/: 2DCurveCorrector.py  SLO_stacker.py  _parse_ini.py  batch_process_profs.py  batch_processing_bscan.py  batch_processing_enface.py  ben2DCC.py  benFastCC.py  benFastCC_Mod.py  benFastCC_Mod_yakub.py  beth_batch_processing.py  beth_retchor_measure.py  calc_gpu_batches.py  extract_batches_around_indicies.py  oct_unp_to_tiff.py  (+14 more)
experimental/napari-cool-tools-matfile/: setup.cfg
experimental/napari-cool-tools-matfile/src/napari_cool_tools_matfile/: _loader.py  napari.yaml
experimental/napari-cool-tools-oir/: setup.cfg
experimental/napari-cool-tools-oir/src/napari_cool_tools_oir/: _loader.py  napari.yaml
florian-batch-proc/: diagnose_pipeline.py  setup.cfg
florian-batch-proc/src/florian_batch_proc/: _batch_processor.py  _batch_widget.py  napari.yaml
florian-linear-tumor-vol/: README.md  pyproject.toml
florian-panOCT-curve-correction/: README.md  pyproject.toml
florian-panOCT-curve-correction/src/florian_panOCT_curve_correction/: __init__.py  _widget.py  curve_correction.py  curve_correction.py.append  napari.yaml
florian-quadratic-tumor-vol/: README.md  setup.cfg  test_tumor_funcs.py
florian-retinoblastoma-vol/: pyproject.toml
florian-retinoblastoma-vol/src/florian_retinoblastoma_vol/: edges.py  enface.py  napari.yaml  plugin.py  surfaces.py  volume.py  widgets.py
florian-retinoblastoma-vol/tests/: test_baseline.py  test_continuity.py  test_detection.py  test_volume.py
florian-segmentation-mac/: setup.cfg
florian-tools/: README.md  setup.cfg
florian-tools/src/florian_tools/: __init__.py  _widgets.py  napari.yaml
florian-tumor-3d-render/: README.md  pyproject.toml
florian-tumor-3d-render/src/florian_tumor_3d_render/: __init__.py  _widget.py  napari.yaml
florian-tumor-vol/: setup.cfg  test_tumor_funcs.py
florian-tumor-vol/src/florian_tumor_vol/: __init__.py  _tumor_funcs.py  _tumor_widget.py  napari.yaml
florian-z-slice-crop/: pyproject.toml
florian-z-slice-crop/src/florian_z_slice_crop/: __init__.py  _widget.py  napari.yaml
napari-cool-tools-img-proc/: setup.cfg
napari-cool-tools-img-proc/src/: readme.md
napari-cool-tools-img-proc/src/napari_cool_tools_img_proc/: __init__.py  _denoise.py  _denoise_funcs.py  _downsample.py  _equalization.py  _equalization_funcs.py  _filters.py  _flip_image.py  _image_arithmetic.py  _log_scale.py  _luminance.py  _luminance_funcs.py  _morphology.py  _morphology_funcs.py  _nn_tools_2D.py  _normalization.py  _normalization_funcs.py  _resize.py  _shift.py  napari.yaml
napari-cool-tools-io/: README.md  setup.cfg
napari-cool-tools-io/src/: readme.md
napari-cool-tools-io/src/napari_cool_tools_io/: __init__.py  _npy_reader.py  _npy_writer.py  _npz_reader.py  _npz_writer.py  _prof_reader.py  _prof_writer.py  _unp_preview.py  _unp_preview_widget.py  _unp_reader.py  napari.yaml  process_unp.py
napari-cool-tools-io/src/napari_cool_tools_io/unp_preview_design/: README.txt  _unp_preview_widget.py  compile_to_py.py  unp_preview.ui
napari-cool-tools-oct-preproc/: setup.cfg
napari-cool-tools-oct-preproc/src/jj_nn_framework/: ROP_vessel_unet.py  caps_engine.py  constants.py  data_setup.py  engine.py  engine2.py  engine3.py  image_funcs.py  mod_utils.py  model_builder.py  model_builder2.py  model_builder3.py  model_builder4.py  model_builder5.py  model_builderB.py  model_utils.py  ndarray_tensor_utils.py  nn_funcs.py  nn_mods.py  nn_transforms copy.py  nn_transforms.py  nn_transforms_v2.py  project_models.py  skeletonize.py  torch_utils.py  unet_builder.py  unified_focal_loss_pytorch.py  utils.py  vin_ai_layers.py  vin_ai_layers2.py  yakub_complex_conjugate_unet.py
napari-cool-tools-oct-preproc/src/napari_cool_tools_oct_preproc/: __init__.py  _oct_preproc.py  _oct_preproc_func.py  napari.yaml
napari-cool-tools-registration/: readme.md  setup.cfg
napari-cool-tools-registration/src/napari_cool_tools_registration/: __init__.py  _bidirectional_ascan_registration.py  _bidirectional_ascan_registration_form.py  _bidirectional_ascan_registration_widget.py  _bidirectional_bscan_registration.py  _bidirectional_bscan_registration_widget.py  _curve_correction.py  _curve_correction_chunk.py  _enfaces_registration.py  _fitting_funcs.py  _registration_tools.py  _registration_tools_funcs.py  napari.yaml
napari-cool-tools-registration/src/napari_cool_tools_registration/_bidirectional_ascan_registration_widget_form/: _bidirectional_ascan_registration_widget.py  bidirectional_ascan_registration_form.ui  compile_to_py.py
napari-cool-tools-registration/src/napari_cool_tools_registration/_bidirectional_bscan_registration_widget_form/: _bidirectional_bscan_registration_form.py  _bidirectional_bscan_registration_widget.py  bidirectional_bscan_registration_form.ui  compile_to_py.py
napari-cool-tools-segmentation/: readme.md  setup.cfg
napari-cool-tools-segmentation/src/napari_cool_tools_segmentation/: __init__.py  _label_cleaning_funcs.py  _label_cleaning_funcs_v2.py  _segmentation.py  _segmentation_funcs.py  napari.yaml
napari-cool-tools-submenu-patch/: setup.cfg
napari-cool-tools-submenu-patch/napari_cool_tools_submenu_patch/: __init__.py
napari-cool-tools-vol-proc/: readme.md  setup.cfg
napari-cool-tools-vol-proc/src/napari_cool_tools_vol_proc/: __init__.py  _averaging_tools.py  _averaging_tools_funcs.py  _masking_tools.py  _masking_tools_funcs.py  _measuring_tools.py  _projection_tools.py  _projection_tools_funcs.py  _slicing_shaping_tools.py  napari.yaml
napari-cool-tools-vol-render/: setup.cfg
napari-cool-tools-vol-render/src/napari_cool_tools_vol_render/: __init__.py  _rendering_tools.py  napari.yaml
(+28 files in other folders)
