[metadata]
name = florian-batch-proc
version = 0.0.1
description = Batch UNP to NPY/NPZ processor for Florian
author = Florian Guillot
license = Apache-2.0
classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    napari-cool-tools-io
    napari-cool-tools-oct-preproc
    numpy
    qtpy
    torch
python_requires = >=3.9
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
* = *.yaml
