[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "florian-panOCT-curve-correction"
version = "0.0.1"
description = "Napari plugin for PanOCT fan-beam curve distortion correction."
authors = [{name = "Florian Guillot"}]
dependencies = [
    "napari",
    "numpy",
    "scipy"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
