[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "florian-retinoblastoma-vol"
version = "0.0.1"
description = "Napari plugin for measuring retinoblastoma tumor volume from UW-OCT B-scan images."
authors = [{name = "Florian Guillot"}]
dependencies = [
    "napari",
    "magicgui",
    "numpy",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "matplotlib",
    "tifffile",
    "trimesh"
]
requires-python = ">=3.10"

