[metadata]
name = florian-tools
version = 0.0.1
description = Consolidated Florian tools for napari (batch processing + Mac segmentation)
author = Florian Guillot
license = Apache-2.0
classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    florian-batch-proc
    florian-segmentation-mac
    florian-tumor-vol
    florian-retinoblastoma-vol
python_requires = >=3.9
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    florian-tools = florian_tools:napari.yaml

[options.package_data]
* = *.yaml
