[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "florian-tumor-3d-render"
version = "0.0.1"
description = "Napari plugin to generate 3D surface renders from tumor mask layers."
authors = [{name = "Florian Guillot"}]
dependencies = [
    "napari",
    "numpy",
    "scipy",
    "scikit-image",
    "trimesh"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
