[metadata]
name = florian-tumor-vol
version = 0.0.1
description = Training-free OCT tumor volumetric measurement tool for napari
author = Florian Guillot
license = Apache-2.0
classifiers =
    Framework :: napari
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    napari
    scipy
    scikit-image
    numpy
python_requires = >=3.9
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src



[options.package_data]
* = *.yaml
