[metadata]
name = napari-cool-tools-io
version = 0.0.1
description = IO tools for COOL lab data formats
long_description = file: README.md
long_description_content_type = text/markdown

author = John Jackson
author_email = jdjacks@post.harvard.edu
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing


[options]
packages = find:
install_requires =
    napari-cool-tools-submenu-patch
    numpy
    magicgui
    qtpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-io = napari_cool_tools_io:napari.yaml

[options.package_data]
* = *.yaml
