[metadata]
name = napari-cool-tools-oct-preproc
version = 0.0.1
description = Preprocessing Tools for OCT annotation and evaluation

[options]
packages = find:
install_requires =
    napari-cool-tools-submenu-patch
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-oct-preproc = napari_cool_tools_oct_preproc:napari.yaml


[options.package_data]
* = *.yaml
