[metadata]
name = napari-cool-tools-registration
version = 0.0.1
description = Plugin for registration of volumetric data or image stacks.

[options]
packages = find:
install_requires =
    napari-cool-tools-submenu-patch
    numpy
    pyvista
    pyvistaqt

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-registration = napari_cool_tools_registration:napari.yaml

[options.package_data]
* = *.yaml
