[metadata]
name = napari-cool-tools-segmentation
version = 0.0.1
description = Plugin for Image/B-scan Segmentation

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-segmentation = napari_cool_tools_segmentation:napari.yaml
    
[options.package_data]
* = *.yaml
