[metadata]
name = napari-cool-tools-submenu-patch
version = 0.0.1
author = Yakub Bayhaqi
description = A patch to move all the Cool Tools menu into a main submenu

classifiers =
    Framework :: napari

[options]
packages = find:
python_requires = >=3.8
install_requires = 
	napari
	app_model

[options.entry_points]
napari.plugin = 
	napari-cool-tools-submenu-patch = napari_cool_tools_submenu_patch