[metadata]
name = napari-cool-tools-vol-proc
version = 0.0.1
description = Plugin for multiple img/B-scan processing.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-vol-proc = napari_cool_tools_vol_proc:napari.yaml

[options.package_data]
* = *.yaml
