[metadata]
name = napari-cool-tools-vol-render
version = 0.0.1
description = Plugin for 3D Rendering.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-vol-render = napari_cool_tools_vol_render:napari.yaml

[options.package_data]
* = *.yaml
