[metadata]
name = napari-cool-tools-matfile
version = 0.0.1

[options]
packages = find:
install_requires =
    numpy
    hdf5storage
    h5py

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-matfile = napari_cool_tools_matfile:napari.yaml

[options.package_data]
* = *.yaml
