[metadata]
name = napari-cool-tools-oir
version = 0.0.1

[options]
packages = find:
install_requires =
    numpy
    hdf5storage
    h5py

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-oir = napari_cool_tools_oir:napari.yaml

[options.package_data]
* = *.yaml
